--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "toxinhotel",
   "version": "1.0.0",
-  "keywords": ["toxin", "hotel", "room", "reserve", "travel"],
+  "keywords": [
+    "toxin",
+    "hotel",
+    "room",
+    "reserve",
+    "travel"
+  ],
   "description": "Responsive multi-page hotel website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack serve --mode development --open",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -16,5 +23,10 @@
   "bugs": {
     "url": "https://github.com/danblinders/danblinders.github.io/issues"
   },
-  "homepage": "https://github.com/danblinders/danblinders.github.io#readme"
+  "homepage": "https://github.com/danblinders/danblinders.github.io#readme",
+  "devDependencies": {
+    "webpack": "^5.46.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
+  }
 }
