--- a/package.json
+++ b/package.json
@@ -25,6 +25,19 @@
   },
   "homepage": "https://github.com/danblinders/danblinders.github.io#readme",
   "devDependencies": {
+    "@babel/core": "^7.14.8",
+    "@babel/preset-env": "^7.14.8",
+    "autoprefixer": "^10.3.1",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.2.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.1.0",
+    "postcss-loader": "^6.1.1",
+    "pug": "^3.0.2",
+    "pug-html-loader": "^1.1.5",
+    "sass": "^1.36.0",
+    "sass-loader": "^12.1.0",
     "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
