Modified webpack config and pakacge.json
Added loaders for pug, styles, added babel, source maps and browserlist. In production mode all files, except for html, are hashing

--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "url": "https://github.com/danblinders/danblinders.github.io/issues"
   },
   "homepage": "https://github.com/danblinders/danblinders.github.io#readme",
+  "browserslist": ">= 1% and not dead",
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  },
   "devDependencies": {
     "@babel/core": "^7.14.8",
     "@babel/preset-env": "^7.14.8",
