--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "ion-rangeslider": "^2.3.1",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "paginationjs": "^2.1.5"
   }
 }
