--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
   },
   "dependencies": {
     "ion-rangeslider": "^2.3.1",
-    "jquery": "^3.6.0",
-    "paginationjs": "^2.1.5"
+    "jquery": "^3.6.0"
   }
 }
