--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "air-datepicker": "^2.2.3",
     "ion-rangeslider": "^2.3.1",
     "jquery": "^3.6.0"
   }
