--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "air-datepicker": "^2.2.3",
     "ion-rangeslider": "^2.3.1",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "jquery-mask-plugin": "^1.14.16"
   }
 }
