--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "air-datepicker": "^2.2.3",
     "ion-rangeslider": "^2.3.1",
     "jquery": "^3.6.0",
-    "jquery-mask-plugin": "^1.14.16"
+    "jquery-mask-plugin": "^1.14.16",
+    "jquery-validation": "^1.19.3"
   }
 }
